# cookie-confusion-toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIX_FORMATTING.md  LICENSE  LINTING_FIXES.md  MANIFEST.in  README.md  cct  check_formatting.sh  docker-compose.yml  fix_test_files.py  format.sh  format_files.py  pyproject.toml  quick_format.py  requirements.txt  setup.py
.github/workflows/: auto-format.yml  format-and-lint.yml  release.yml  test.yml
docs/: ethical_guidelines.md  installation.md  remediation.md  research_background.md  usage.md  vulnerabilities.md
docs/modules/: README.md  bypassgen.md  case_sensitivity.md  clientfork.md  cookiebomb.md  crlf_injection.md  path_override.md  serverdrift.md  shadow_cookies.md  utils.md
examples/scripts/: compare_browsers.py  custom_tests.py  full_assessment.py
scripts/: fix_linting.sh
src/cookie_confusion_toolkit/: __init__.py  bypassgen.py  cli.py  clientfork.py  cookiebomb.py  serverdrift.py
src/cookie_confusion_toolkit/utils/: __init__.py  common.py  cookie_utils.py
tests/: __init__.py  conftest.py
tests/integration/: test_full_assessment.py
tests/unit/: test_common.py  test_cookie_utils.py  test_cookiebomb.py
